# bert_distillation_thi

./: .gitignore  README.md  dataloder_teacher.py  distilled-bert.py  mps_test.py  pyproject.toml  requirements.txt  trainer_teacher.py
