[tool.poetry]
name = "distillation-example"
version = "0.1.0"
description = ""
authors = ["jell Wu <jell0720@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.6.0"
transformers = "^4.49.0"
datasets = "^3.3.2"
accelerate = "^1.4.0"
huggingface-hub = "^0.29.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
